--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,6 +10,7 @@ jobs:
     environment: CertificatePass
     env:
       CERTIFICATE_PASS: ${{ secrets.PASSWORD }}
+      TEST: ${{ secrets.PASSWORD }}
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "environment variable is ${{ env.CERTIFICATE_PASS }}"
