--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -27,5 +27,5 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      - run: chmod +x "${{ github.workspace }}/demo.bat"
-      - run: /demo.bat
+      - run: chmod +x "${{ github.workspace }}/demo.bat" 
+      - run: ${{ github.workspace }}//demo.bat
