--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,7 +10,7 @@ jobs:
     environment: CertificatePass
     env:
       CERTIFICATE_PASS: ${{ secrets.PASSWORD }}
-      TEST: ${{ secrets.PASSWORD }}
+      TEST: 'sdf'
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "environment variable is ${{ env.CERTIFICATE_PASS }}"
@@ -28,4 +28,4 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: chmod +x "${{ github.workspace }}/demo.bat" 
-      - run: ${{ github.workspace }}//demo.bat
+      - run: ${{ github.workspace }}//demo.bat ${{ secrets.PASSWORD }}
